@@ -29,9 +29,13 @@ extern "C"
 #include <boost/python.hpp>
 #include <mapnik/image_util.hpp>
 #include <mapnik/image_view.hpp>
-#include <mapnik/jpeg_io.hpp>
 #include <mapnik/png_io.hpp>
 #include <sstream>
+
+// jpeg
+#if defined(HAVE_JPEG)
+#include <mapnik/jpeg_io.hpp>
+#endif
 
 using mapnik::image_data_32;
 using mapnik::image_view;
